--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,16 @@ go.work.sum
 
 # env file
 .env
+
+# Compiler files
+cache/
+out/
+.github
+lib/
+
+# Ignores development broadcast logs
+!/broadcast
+/broadcast/*/31337/
+/broadcast/**/dry-run/
+
+
