--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 SEPOLIA_EQUALIZER_LENDER=
-SEPOLIA_RPC_URL=
+SEPOLIA_HTTP_RPC_URL=
+SEPOLIA_WS_RPC_URL=
 PRIVATE_KEY=
 WALLET_ADDRESS=
 ETHERSCAN_API_KEY=
