--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,13 @@ debug = true  # Enable debug information
 solc = "0.8.26"  # Use the version compatible with your contracts
 #rpc_url = "http://127.0.0.1:8545"
 rpc_url = "${SEPOLIA_HTTP_RPC_URL}"
+etherscan_api_key = "${ETHERSCAN_API_KEY}"
+private_key = "${PRIVATE_KEY}"
+auto_detect_remappings = true # recursive auto-detection of remappings
+remappings = []
+broadcast = 'broadcast'
+show_progress = true
+build_info = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
