--- a/foundry.toml
+++ b/foundry.toml
@@ -15,6 +15,7 @@ remappings = []
 broadcast = 'broadcast'
 show_progress = true
 build_info = true
+ffi = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
