--- a/foundry.toml
+++ b/foundry.toml
@@ -16,6 +16,10 @@ broadcast = 'broadcast'
 show_progress = true
 build_info = true
 ffi = true
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
