--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ SEPOLIA_WS_RPC_URL=
 PRIVATE_KEY=
 WALLET_ADDRESS=
 ETHERSCAN_API_KEY=
+SEPOLIA_CHAIN_ID=11155111
 #Deployed Sepolia contracts
 Vault=
 XToken=
