--- a/foundry.toml
+++ b/foundry.toml
@@ -2,8 +2,11 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-optimizer = false
-via_ir = false
+optimizer = true
+optimizer_runs = 200
+# Use intermediate representation (IR) compilation
+via_ir = true
+
 debug = true  # Enable debug information
 solc = "0.8.26"  # Use the version compatible with your contracts
 #rpc_url = "http://127.0.0.1:8545"
