--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 SEPOLIA_EQUALIZER_LENDER=
-SEPOLIA_HTTP_RPC_URL=
+SEPOLIA_HTTP_RPC_URL=https://sepolia.infura.io/v3/2CBHvvCulqDrSNFVkLQBeW1tiqL
 SEPOLIA_WS_RPC_URL=
 PRIVATE_KEY=
-WALLET_ADDRESS=
+WALLET_ADDRESS=0x8822D9472E96F22565cc07aD259DC03b100B18d6
 ETHERSCAN_API_KEY=
 SEPOLIA_CHAIN_ID=11155111
 #Deployed Sepolia contracts
-Vault=
-XToken=
-Pigfox=
-Router1=
-Router2=
-Arbitrage=
+VAULT=
+XTOKEN=
+PIGFOX_TOKEN=
+DEX1=
+DEX2=
+TRASH_CAN=
+ARBITRAGE=
 MsgSender=
