--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SEPOLIA_EQUALIZER_LENDER=
-SEPOLIA_HTTP_RPC_URL=https://sepolia.infura.io/v3/2CBHvvCulqDrSNFVkLQBeW1tiqL
+SEPOLIA_HTTP_RPC_URL=https://sepolia.infura.io/v3/
 SEPOLIA_WS_RPC_URL=
 PRIVATE_KEY=
 WALLET_ADDRESS=0x8822D9472E96F22565cc07aD259DC03b100B18d6
